--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap");
 
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .active {
